# iiasa-abm-calibration

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: gen_ref_pages.py  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/overrides/: main.html
docs/user-guide/: country-specific-processing.md  outputs.md  workflow-overview.md
docs/user-guide/pipelines/: _template.md  currency-conversion.md  data-harmonization.md  industry-aggregation.md  initial-conditions.md  parameter-estimation.md  raw-data-extraction.md
examples/: complete_calibration_example.py
src/macro_abm_calibration/: __init__.py  config.py  models.py
src/macro_abm_calibration/calibrators/: __init__.py  base.py  export.py  initial_conditions.py  parameters.py  utils.py  validation.py
src/macro_abm_calibration/data_sources/: __init__.py  base.py  eurostat.py  factory.py  icio.py  oecd.py
src/macro_abm_calibration/processors/: __init__.py  base.py  currency.py  harmonizer.py  industry.py  pipeline.py  utils.py
src/macro_abm_calibration/utils/: __init__.py  logging.py  validation.py
tests/: __init__.py
tests/integration/: test_data_sources.py
tests/unit/: test_calibrators.py  test_config.py  test_models.py  test_processors.py
